Fix searchbar overflow issue

--- a/src/app/pages/app-bar/search-bar/search-bar.component.scss
+++ b/src/app/pages/app-bar/search-bar/search-bar.component.scss
@@ -4,6 +4,7 @@
     position: sticky;
     z-index: 1000;
     top: 0;
+    overflow-x: hidden;
 }
 .main-header {
     transition: opacity 250ms ease-in-out;
@@ -17,7 +18,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 0%;
+    width: 0;
     background: map-get($pxb-white, 50);
     transition: width 250ms ease-in-out;
 
